# mythmallow

./: .linelint.yml  Cargo.toml  README.md  book.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/locales/en-US/: main.ftl.yml
assets/locales/tr/: main.ftl.yml
core/dependencies/: Cargo.toml
core/dependencies/src/: lib.rs
core/plugins/: Cargo.toml
core/plugins/src/: configuration.rs  lib.rs
core/resources/: Cargo.toml
core/resources/src/: all.rs  configuration.rs  lib.rs
docs/: SUMMARY.md  resources.md
docs/enemies/: fruit.md  savory.md  sweet.md
docs/enemies/fruit/: blackberry.md  blueberry.md  cherry.md  coconut.md  dragon-fruit.md  melon.md  pineapple.md  plum.md  pomegranate.md  raspberry.md  watermelon.md
docs/enemies/savory/: almond.md  baguette.md  bread-stick.md  canned-chips.md  cashew.md  corn-chip.md  hazelnut.md  nacho.md  peanut.md  pistachio.md  popcorn.md  potato-chip.md  pretzel.md  walnut.md
docs/enemies/sweet/: baklava.md  butter-cookie.md  cereal-bar.md  cereal.md  chocolate-bar.md  chocolate-chip-cookie.md  chocolate-chip.md  (+29 more)
docs/modes/: survival.md
docs/players/: greek.md
docs/weapons/: egyptian.md  norse.md
enemies/sweet/: Cargo.toml
game/: Cargo.toml
game/src/: lib.rs  plugin.rs  prelude.rs
game/src/camera/: constants.rs  plugin.rs  systems.rs
game/src/combat/: components.rs  mod.rs  plugin.rs  systems.rs  utils.rs
game/src/configuration/: commands.rs  constants.rs  mod.rs  plugin.rs  resources.rs  systems.rs
game/src/console/: mod.rs  plugin.rs  systems.rs
game/src/core/: components.rs  depths.rs  mod.rs  plugin.rs  resources.rs  states.rs  systems.rs
game/src/core/sets/: enemy_selection_screen.rs  game_mode_selection_screen.rs  game_over_menu.rs  gameplay.rs  initialization.rs  level_up_screen.rs  loading.rs  main_menu.rs  market.rs  menu.rs  mod.rs  pause_menu.rs  player_selection_screen.rs  restart.rs  settings_menu.rs
game/src/effect/: blood.rs  mod.rs  plugin.rs  pop.rs  systems.rs  walking.rs
game/src/enemy/: components.rs  constants.rs  interfaces.rs  mod.rs  plugin.rs  registry.rs  resources.rs  systems.rs
game/src/input/: mod.rs  plugin.rs  systems.rs
game/src/input/actions/: game.rs  game_mode_selection_screen.rs  game_over_menu.rs  global.rs  level_up_screen.rs  main_menu.rs  market.rs  mod.rs  pause_menu.rs  player_selection_screen.rs  settings_menu.rs
game/src/inventory/: commands.rs  components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
game/src/item/: commands.rs  components.rs  constants.rs  interfaces.rs  mod.rs  plugin.rs  systems.rs
game/src/items/: commands.rs  constants.rs  interfaces.rs  mod.rs  plugin.rs  registry.rs  systems.rs
game/src/leveling/: commands.rs  components.rs  constants.rs  events.rs  mod.rs  plugin.rs  resources.rs  systems.rs
game/src/map/: components.rs  constants.rs  mod.rs  plugin.rs  resources.rs  systems.rs  utils.rs
game/src/market/: commands.rs  mod.rs  plugin.rs  resources.rs  systems.rs
game/src/mode/: conditions.rs  interfaces.rs  mod.rs  plugin.rs  registry.rs  resources.rs  systems.rs
game/src/movement/: components.rs  plugin.rs  systems.rs
game/src/perk/: commands.rs  constants.rs  events.rs  interfaces.rs  mod.rs  plugin.rs  registry.rs  resources.rs  systems.rs
game/src/physics/: layers.rs  mod.rs  plugin.rs  systems.rs
game/src/player/: commands.rs  components.rs  conditions.rs  constants.rs  interfaces.rs  mod.rs  plugin.rs  registry.rs  resources.rs  systems.rs
game/src/property/: components.rs  plugin.rs  systems.rs
game/src/status_effect/: components.rs  plugin.rs  systems.rs
game/src/ui/: mod.rs  plugin.rs
game/src/ui/diagnostics_overlay/: components.rs  plugin.rs  systems.rs
game/src/ui/enemy_selection_screen/: components.rs  plugin.rs  systems.rs
game/src/ui/game_mode_selection_screen/: components.rs  constants.rs  localization.rs  plugin.rs  styles.rs  systems.rs
game/src/ui/game_over_menu/: components.rs  constants.rs  localization.rs  plugin.rs  styles.rs  systems.rs
game/src/ui/hud/: components.rs  constants.rs  localization.rs  materials.rs  mod.rs  plugin.rs  styles.rs  systems.rs
game/src/ui/level_up_screen/: commands.rs  components.rs  constants.rs  localization.rs  mod.rs  plugin.rs  resources.rs  styles.rs  systems.rs
game/src/ui/main_menu/: components.rs  constants.rs  localization.rs  plugin.rs  styles.rs  systems.rs
game/src/ui/market/: components.rs  constants.rs  localization.rs  plugin.rs  resources.rs  styles.rs  systems.rs
game/src/ui/pause_menu/: components.rs  constants.rs  localization.rs  mod.rs  plugin.rs  resources.rs  styles.rs  systems.rs
game/src/ui/player_selection_screen/: components.rs  constants.rs  localization.rs  plugin.rs  styles.rs  systems.rs
game/src/ui/settings_menu/: components.rs  constants.rs  localization.rs  mod.rs  plugin.rs  styles.rs  systems.rs
game/src/ui/widget/: components.rs  constants.rs  plugin.rs  systems.rs
items/greek/: Cargo.toml
modes/escape/: Cargo.toml
modes/survival/: Cargo.toml
perks/basic/: Cargo.toml
players/greek/: Cargo.toml
src/: lib.rs  main.rs  plugin.rs  prelude.rs
src/camera/: components.rs  constants.rs  plugin.rs  systems.rs
src/combat/: components.rs  plugin.rs  systems.rs
src/configuration/: constants.rs  plugin.rs  resources.rs
src/core/: mod.rs  plugin.rs  resources.rs  sets.rs  states.rs  systems.rs
src/diagnostics/: components.rs  mod.rs  plugin.rs  systems.rs
src/enemy/: components.rs  constants.rs  plugin.rs  systems.rs
src/input/: actions.rs  plugin.rs  systems.rs
src/map/: components.rs  plugin.rs  resources.rs  systems.rs
src/mode/: interfaces.rs  mod.rs  plugin.rs  registry.rs  resources.rs  systems.rs
src/movement/: components.rs  plugin.rs  systems.rs
src/physics/: components.rs  constants.rs  layers.rs  mod.rs  plugin.rs  resources.rs  schedules.rs  systems.rs
src/player/: components.rs  constants.rs  plugin.rs  systems.rs
src/property/: components.rs  plugin.rs
src/status_effect/: components.rs  plugin.rs  systems.rs
src/ui/: mod.rs  plugin.rs
(+170 files in other folders)
