[package]
name = "mythmellow"
description = "A top-down arena shooter roguelite in which you're a mythical marshmallow god fighting against peasant munchies such as chocolates, jellies, or candies!"
categories = ["games"]
keywords = ["arena-shooter", "game", "mythical", "roguelite", "top-down"]
repository = "https://github.com/umut-sahin/mythmellow/"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
]

[dependencies]
bevy = { version = "0.11", features = ["serialize"] }
bevy-persistent = { version = "0.3" }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", branch = "main", optional = true }
bevy_prng = { version = "0.1", features = ["rand_chacha"] }
bevy_rand = { version = "0.3" }
clap = { version = "4.3", features = ["derive"] }
dirs = { version = "5.0" }
leafwing-input-manager = { version = "0.10" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.11", features = ["serde"] }
strum = { version = "0.25" }
strum_macros = { version = "0.25" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy-persistent-windows = { version = "0.3" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1" }
instant = { version = "0.1" }
web-sys = { version = "0.3" }

[features]
default = []
development = ["bevy_editor_pls"]
native = ["bevy-persistent/toml"]
wasm = ["bevy-persistent/json"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"

[package.metadata.docs.rs]
features = ["native"]
