[package]
name = "mythmallow"
description = "A top-down arena shooter roguelite in which you're a mythical marshmallow fighting against peasant munchies such as chocolates, jellies, or candies!"
categories = ["games"]
keywords = ["arena-shooter", "game", "mythical", "roguelite", "top-down"]
repository = "https://github.com/umut-sahin/mythmallow/"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
    "Emre Baba <emrebaba0@protonmail.com>",
]

[dependencies]
mythmallow-enemies-sweet = { path = "enemies/sweet" }
mythmallow-game = { path = "game" }
mythmallow-items-greek = { path = "items/greek" }
mythmallow-mode-survival = { path = "modes/survival" }
mythmallow-players-greek = { path = "players/greek" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { version = "0.1" }

[features]
# base
default = ["native-development"]
development = ["mythmallow-game/development"]
# native
native = ["mythmallow-game/native"]
native-development = ["native", "development", "mythmallow-game/native-development"]
native-release = ["native", "mythmallow-game/native-release"]
# wasm
wasm = ["mythmallow-game/wasm"]
wasm-development = ["wasm", "development", "mythmallow-game/wasm-development"]
wasm-release = ["wasm", "mythmallow-game/wasm-release"]

[workspace]
resolver = "2"
members = [
    "enemies/sweet",
    "game",
    "items/greek",
    "modes/survival",
    "players/greek",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
