[package]
name = "mythmallow"
description = "A top-down arena shooter roguelite in which you're a mythical marshmallow fighting against peasant munchies!"
categories = ["games"]
keywords = ["arena-shooter", "game", "mythical", "roguelite", "top-down"]
repository = "https://github.com/umut-sahin/mythmallow/"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
    "Emre Baba <emrebaba0@protonmail.com>",
    "Onur Şahin <onordsahin@proton.me>",
    "Arda Özger <mehmetardaozger@gmail.com>",
]

[dependencies]
mythmallow-core-dependencies = { path = "core/dependencies" }
mythmallow-core-plugins = { path = "core/plugins" }
mythmallow-core-resources = { path = "core/resources" }

[features]
default = ["development"]
development = ["mythmallow-core-dependencies/development"]

[workspace]
resolver = "2"
members = [
    "core/dependencies",
    "core/plugins",
    "core/resources",
]

[workspace.lints.clippy]
derivable_impls = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"

[profile.web-release]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.web-release.build-override]
opt-level = 3
