[package]
name = "mythmallow-game"
version = "0.0.0"
edition = "2021"

[dependencies]
avian2d = { version = "0.1" }
bevy = { version = "0.14", features = ["serialize"] }
bevy-persistent = { version = "0.6" }
bevy_console = { git = "https://github.com/msklosak/bevy-console", branch = "bevy_014" }
bevy_easings = { version = "0.14" }
bevy_editor_pls = { git = "https://github.com/zhaop/bevy_editor_pls.git", branch = "bevy-0.14", optional = true }
bevy_fluent = { git = "https://github.com/umut-sahin/bevy_fluent", branch = "bevy-v0.14" }
bevy_prng = { version = "0.7", features = ["rand_chacha"] }
bevy_rand = { version = "0.7" }
clap = { version = "4.5", features = ["derive"] }
dirs = { version = "5.0" }
fluent = { version = "0.16" }
fluent_content = { version = "0.0" }
itertools = { version = "0.13" }
leafwing-input-manager = { version = "0.14" }
prettytable = { version = "0.10" }
num-format = { version = "0.4" }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13", features = ["serde"] }
smol_str = { version = "0.2" }
strum = { version = "0.26" }
strum_macros = { version = "0.26" }
typed-builder = { version = "0.18" }
unic-langid = { version = "0.9", features = ["serde"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy-persistent-windows = { version = "0.6" }
sys-locale = { version = "0.3" }

[target.'cfg(target_family = "wasm")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
sys-locale = { version = "0.3", features = ["js"] }
web-sys = { version = "0.3" }

[features]
# base
default = []
development = ["bevy_editor_pls"]
# native
native = ["bevy-persistent/toml"]
native-development = ["native", "development", "bevy/dynamic_linking"]
native-release = ["native"]
# wasm
wasm = ["bevy-persistent/json"]
wasm-development = ["wasm", "development"]
wasm-release = ["wasm"]

[lints]
workspace = true
