[package]
name = "mythmallow-core-dependencies"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["serialize"] }
clap = { version = "4.5", features = ["derive"] }
level-adjusted-log = { package = "log", version = "0.4", features = ["max_level_info", "release_max_level_info"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy-persistent = { version = "0.6", features = ["toml"] }
bevy-persistent-windows = { version = "0.6" }
dirs = { version = "5.0" }

[target.'cfg(target_family = "wasm")'.dependencies]
bevy-persistent = { version = "0.6", features = ["json"] }
console_error_panic_hook = { version = "0.1" }
web-sys = { version = "0.3" }

[features]
development = ["bevy/dynamic_linking"]

[lints]
workspace = true
